--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Algorithm Visualizer</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Algorithm Visualizer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Algorithm Visualizer + Analyzer</h1>
-  </header>
+    <div class="container">
+        <h1>Algorithm Visualizer</h1>
 
-  <div id="controls">
-    <button id="generate">Generate Array</button>
-    <select id="algorithm">
-      <option value="bubbleSort">Bubble Sort</option>
-      <option value="selectionSort">Selection Sort</option>
-      <option value="insertionSort">Insertion Sort</option>
-    </select>
-    <button id="start">Start</button>
-    <label>Speed: <input id="speed" type="range" min="10" max="200" value="50"></label>
-  </div>
+        <div class="controls">
+            <select id="algorithm-select">
+                <option value="bubbleSort">Bubble Sort</option>
+                <option value="selectionSort">Selection Sort</option>
+                <option value="insertionSort">Insertion Sort</option>
+                <option value="mergeSort">Merge Sort</option>
+                <option value="quickSort">Quick Sort</option>
+            </select>
 
-  <div id="array-container"></div>
+            <input type="range" id="array-size" min="10" max="100" value="50">
+            <input type="range" id="speed" min="1" max="1000" value="250">
 
-  <footer>
-    <p>Built by [Your Name]</p>
-  </footer>
+            <button id="new-array">New Array</button>
+            <button id="start">Start</button>
+        </div>
 
-  <script src="utils/helpers.js"></script>
-  <script src="utils/render.js"></script>
-  <script src="algorithms/bubbleSort.js"></script>
-  <script src="app.js"></script>
+        <div id="array-container"></div>
+    </div>
+
+    <script type="module" src="app.js"></script>
 </body>
 </html>
